# project1-mlops

./: Dockerfile  README.md  docker-compose.yml  project_mlops.ipynb  project_mlops_lazypredict.ipynb  pyproject.toml  requirements.txt
data/: airbnb_rio_cleaned_20250928_125828.csv  airbnb_rio_cleaned_latest.csv  compare_automl_models.ipynb  data_processing_summary_20250927_131703.txt  data_processing_summary_20250928_125828.txt  inside_airbnb_eda.ipynb
streamlit/: app.py
streamlit/domain/: architecture.py  plotter.py
streamlit/ml/models/: lazy_predict_model.py  melhor_modelo_pycaret.pkl  my_model.py  preprocessor.pkl  pycaret_model.py
streamlit/services/: dataframes.py
streamlit/ui/charts/: neighbourhood_price_charts.py  price_category_charts.py  price_distribution_charts.py
streamlit/ui/components/: airbnb_price_dashboard.py
streamlit/ui/tabs/: ml_tools_comparison.py  my_model_interactive.py
