[tool.poetry]
name = "project1-mlops"
version = "0.1.0"
description = ""
authors = ["vitorgabriel27 <vitorg135@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.2.0"
pandas = "^1.5.0"
numpy = "^1.23.0"
openpyxl = "^3.0.0"
scipy = "^1.10.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.14.0"
yellowbrick = "^1.5.0"
streamlit = "^1.50.0"
jupyter = "^1.0.0"
ipython = "^8.0.0"
ipywidgets = "^8.0.0"
joblib = "^1.2.0"
tqdm = "^4.65.0"
lazypredict = "^0.2.12"
lightgbm = "^3.3.0"
xgboost = "^1.7.0"
catboost = "^1.2.0"
pycaret = "^3.0.0"
shap = "^0.41.0"
interpret = "^0.2.0"
optuna = "^3.2.0"
hyperopt = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"